Refactor: Standardize project name and remove unused fragments
This commit standardizes the project name to "LeFauxPass" across various configuration files and removes the unused `FirstFragment` and `SecondFragment`.

The following changes were made:
- Updated project name in `settings.gradle.kts`, `app/src/main/AndroidManifest.xml`, `app/src/main/res/values/strings.xml`, `app/src/main/res/values/themes.xml`, `app/src/main/res/values-night/themes.xml`, `app/src/main/res/values-v23/themes.xml`, and `.idea/.name`.
- Updated namespace and `applicationId` in `app/build.gradle.kts` from `com.hereliesaz.lafauxpass` to `com.hereliesaz.lefauxpass`.
- Updated theme name from `LAFauxPassTheme` to `LeFauxPassTheme` in `app/src/main/java/com/hereliesaz/lafauxpass/ui/theme/Theme.kt`.
- Increased `compileSdk` and `targetSdk` from 34 to 36 in `app/build.gradle.kts`.
- Deleted `FirstFragment.kt` and `SecondFragment.kt` as they are no longer in use.

Signed-off-by: Az <hereliesaz@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,7 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="adult_single_ride_bus_amp_streetcar"><![CDATA[Adult Single Ride, Bus & Streetcar]]></string>
+    <string name="new_orleans_la">New Orleans, LA</string>
+    <string name="expires_jun_22_2023_1_03_pm">Expires Jun 22, 2023, 1:03 PM</string>
 </resources>
